[tool.poetry]
name = "gendiff"
version = "0.1.0"
description = ""
authors = ["charadri <kirillkulikov307@gmail.com>"]
packages = [
 { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
wemake-python-styleguide = "^0.13.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
